Fixed some compiler warnings